# merceka-core

./: .gitignore  .sesskey  README.md  README_LLM_AGENCY_SETUP.md  TODO-IDEAS.md  evaluation_design.md  evaluation_plan.md  pyproject.toml  settings.ini  vulture_whitelist.py
.claude/: CLAUDE.md
.claude/hooks/: goal-gate.sh  usage-limit-notify.sh
.github/workflows/: ci.yml
agents/: config.json  settings.json
agents/hooks/: session-start.sh
agents/policy/: AGENTS.md
docs/archive/: evaluation_design.md  evaluation_plan.md
docs/evidence/2026-07-05-api-coherence/: evidence.md
docs/evidence/2026-07-05-drop-nbdev/: evidence.md
docs/evidence/2026-07-05-eval-deps/: evidence.md
docs/evidence/2026-07-05-gemini-image/: evidence.md
docs/evidence/2026-07-05-llm-dispatch/: evidence.md
docs/evidence/2026-07-05-split-llm/: evidence.md
docs/evidence/2026-07-05-test-giants/: evidence.md
docs/evidence/2026-07-05-unify-cli/: evidence.md
docs/evidence/2026-07-07-vision-critique/: evidence.md
docs/ideation/: 2026-07-06-fable-pass.md
docs/plans/: 2026-04-16-001-feat-merceka-phase-0-plan.md  2026-07-05-001-refactor-llm-dispatch-plan.md  2026-07-05-002-refactor-unify-cli-providers-plan.md  2026-07-05-003-refactor-split-llm-plan.md  2026-07-05-004-test-untested-giants-plan.md  2026-07-05-005-feat-gemini-image-understanding-plan.md
docs/solutions/: 2026-04-16-nbdev-one-way-drift-detection.md  2026-07-05-duplicated-dispatch-ladders-diverge-silently.md  INDEX.md
merceka_core/: __init__.py  _cli.py  _modidx.py  agent.py  errors.py  evaluation.py  image.py  llm.py  llm_gemini.py  messages.py  retry.py
merceka_core/agents/: __init__.py  claude_code.py  codex.py  pi.py
merceka_core/resources/: __init__.py  gpu.py
merceka_core/vision/: __init__.py  critique.py  zoom.py  zoom_judge.py
merceka_core/wa_bot/: README.md  __init__.py  client.py  config.py  models.py  utils.py  webhook.py
nbs/: 00_llm.ipynb  01_evaluation.ipynb  index.ipynb
tests/: __init__.py  test_agent.py  test_agent_pi_seam.py  test_claude_agent_provider.py  test_claude_provider.py  test_cli_builders.py  test_codex_agent_provider.py  test_dispatch_truth_table.py  test_evaluation.py  test_evaluation_deps.py  test_gemini_image_understanding.py  test_image_dispatch.py  test_image_openai_sizes.py  test_image_openrouter.py  test_image_transparent.py  test_image_upscale.py  test_llm.py  test_llm_gemini.py  test_llm_resources.py  test_llm_structured.py  test_package_metadata.py  test_pi_agent_provider.py  test_retry_policy.py  test_tool_calling.py  test_top_level_api.py  test_vision_critique.py  test_vision_zoom.py  test_zoom_judge.py
tests/contracts/: test_mindweaver_surface.py  test_slab_surface.py
tests/integration/: test_gemma_local.py  test_gpu_lock_cross_process.py  test_llm_video.py
tests/wa_bot/: __init__.py  conftest.py  test_client.py  test_config.py  test_utils.py  test_webhook.py
todos/cards/: 01-fix-chat-bypasses-select-backend.md  02-robustness-gpu-lock-executor-thread-leak.md  03-robustness-subprocess-stdin-cleanup-and-stream-timeout.md  04-robustness-webhook-signature-and-body-cap.md  05-simplify-remove-dead-litellm-and-chat-one.md  06-simplify-extract-shared-agent-subprocess-helpers.md  07-robustness-wa-bot-client-transient-vs-terminal.md  08-refactor-document-image-and-evaluation-modules.md  09-idea-usage-cost-accounting.md  10-idea-merceka-doctor-cli.md  11-idea-parse-model-ref-consolidation.md  README.md
