[project]
name = "merceka-core"
version = "0.1.0"
description = "Core utilities for merceka projects"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ollama>=0.6.1",
    "litellm>=1.80.5",
    "pydantic>=2.12.4",
    "tqdm>=4.0.0",
    "python-dotenv>=1.0.0",
    "Pillow>=10.0.0",
    "httpx>=0.28.1",
    "google-genai>=1.0",
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
evaluation = [
    "pandas>=2.0",
]
wa-bot = [
    "python-fasthtml>=0.12.36",
]

[tool.pytest.ini_options]
markers = [
    "integration: require network + credentials; skipped by default",
    "gpu: require GPU or cross-process fcntl; run on self-hosted runners",
]
addopts = "-m 'not integration and not gpu'"

[tool.setuptools.packages.find]
include = ["merceka_core*"]

[tool.basedpyright]
typeCheckingMode = "basic"
reportMissingImports = false
include = ["merceka_core"]
# Grandfathered files with pre-existing type errors (2026-07-15, CI introduction).
# Fix and remove entries; never add new ones.
exclude = [
  "merceka_core/evaluation.py",
  "merceka_core/llm.py",
  "merceka_core/image.py",
  "merceka_core/wa_bot/webhook.py",
]

[tool.ruff]
line-length = 100
indent-width = 2
exclude = ["setup.py"]

[tool.ruff.lint]
ignore = [
    "F403", # Star imports
    "F405", # Star imports
    "E402", # Module import not at the top of file.
    "E701", # Multiple statements on one line    
    "E702", # Multiple statements on one line    
    "F811", # Redefinition of unused function (used for routes)
] 

[tool.ruff.lint.pydocstyle]
convention = "google"

[dependency-groups]
dev = [
    "basedpyright>=1.39.9",
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "python-fasthtml>=0.12.36",
    "respx>=0.22.0",
    "ruff>=0.15.20",
    "vulture>=2.16",
]
